# house_explorer_server

./: .gitignore  MANIFEST.in  README.md  models.py  pyproject.toml  renovate.json  requirements.txt  server.py  setup.py  wsgi.py
.github/workflows/: update.yaml
explorer_api/: __init__.py  config.py
explorer_api/models/: Auth.py  History.py  User.py  __init__.py
explorer_api/shared/: Authentication.py
explorer_api/utils/: house_scraper.py  house_types.csv  type_finder.py  type_scraper.py
explorer_api/views/: auth_view.py  dadata_view.py  history_view.py  house_scraper.py  houses_view.py  profile_view.py
tests/: conftest.py  test_check_token.py  test_house_info.py  test_login.py  test_profile.py  test_register.py  test_suggestions.py  test_user_location.py
