[tool.poetry]
name = "house-explorer-backend"
version = "0.1.0"
description = "Flask app for backend of house-explorer app"
authors = ["Sasha Kirillov <sasha.anaximander@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "==4.9.3"
flask = "==1.1.4"
flask-bcrypt = "==0.7.1"
flask-cors = "==3.0.10"
flask-sqlalchemy = "==2.5.1"
gunicorn = "==20.1.0"
psycopg2 = "==2.9.1"
pyjwt = "==2.1.0"
python-dotenv = "==0.18.0"
requests = "==2.25.1"
sqlalchemy = "==1.4.19"
sqlalchemy-utils = "==0.37.7"
transliterate = "==1.10.2"

[tool.poetry.dev-dependencies]
black = "==19.10b0"
flake8 = "==3.9.2"
pytest = "==6.2.4"
termcolor = "==1.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
